spade-tests/src/snapshots/spade_tests__integration__trait_tests__struct_impls_are_specific.snap
---
source: spade-tests/src/integration.rs
---
struct Struct<T1, T2> {x: T1, y: T2}

impl Struct<bool, bool> {
    fn method(self) {}
}

fn test() {
    Struct(true, 0u8).method()
}


error: `Struct<bool, uint<8>>` has no method `method`
  ┌─ testinput:8:23
  │
8 │     Struct(true, 0u8).method()
  │     ------------------^^^^^^--
  │     │                 │
  │     │                 No such method
  │     This has type `Struct<bool, uint<8>>`
  │
  = help: The method exists for `Struct<bool, bool>`
